$Id: CHANGES,v 1.87 2009/08/25 05:41:56 psavola Exp $

25/08/2009	Fix parallel make, from Robert Buchholz / Gentoo.

03/08/2009	Release 1.4.  Only restores original behaviour changed in
		1.3: RAs were accidentally often unicast to solicitors
		instead of being multicast.

07/07/2009	Release 1.3.

24/06/2009	Work around unaligned traps on Alpha, patch from:
		http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=456205

19/06/2009	Fixes and enhancements from Michael Stapelberg.  Add a new
		'clients' interface definition to allow configuring which
		address to send advertisements and accept from. Use
		getifaddrs() on BSD because ioctl didn't work on NetBSD 5.
		Use int instead of bool to make NetBSD 5 happy.

21/01/2009	Add a workaround for Linux in scenarios where libc is
		providing IPV6_RECV(PKTINFO|HOPLIMIT) has renumbered IPV6_PKTINFO,
		but kernel doesn't support it yet (<2.6.14).  Found out by
		Freetz (special thanks to Paul Oranje) and OpenWrt projects.
		See the source code and CVS changelog for more.

28/10/2008	Release 1.2.

14/10/2008	Accept virtually any interface name (up to 15 chars) instead of
		forcing a specific naming convention.  Patch from
		Michiel Brandenburg.

		If stale radvd.pid file exists, try to overwrite it unless
		the specified PID exists, from Fedora (Martin Nagy).

		Define _GNU_SOURCE on Linux, otherwise glibc >= 2.8
		compilation fails.

		Remove -Wconversion from default CFLAGS as it is very noisy.
		Fix some warnings, from Jim Paris.

31/03/2008	Update references to RFCs.  Give pointer to the "two hour rule".
		Decrease the default valid and preferred lifetimes from 30/1
		days to 1day/4hours, respectively.  See more info at:

		http://lists.litech.org/pipermail/radvd-devel-l/2007-October/000282.html

04/02/2008	Release 1.1.

24/01/2008	Implement privilege separation (Linux only) so that
		config_interface() works both with a user and root,
		even after HUP signal.  Work by Jim Paris.
